// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ComparatorBar /> renders correctly with default <ComparatorBar /> 1`] = `
<div>
  <div
    class="comparator-bar"
  >
    <div
      class="comparator-bar--container"
    >
      <div
        class="card"
        data-uitestid="comparator-bar-vehicle-card0-present"
      >
        <p
          class="heading -black -lead"
        >
          Ford Focus
        </p>
        <span
          class="text -xsmall -dark"
        >
          1.0 ECOBOOST 125 ST-LINE NAV 5 DOORS
        </span>
        <button
          class="corner-button"
          data-testid="comparatorBar-delete-1"
          data-uitestid="comparator-bar-vehicle_card-remove-button-1"
          type="button"
        >
          <i
            class="icon -white"
          >
            <svg
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <polygon
                points="400 145.49 366.51 112 256 222.51 145.49 112 112 145.49 222.51 256 112 366.51 145.49 400 256 289.49 366.51 400 400 366.51 289.49 256 400 145.49"
              />
            </svg>
          </i>
        </button>
      </div>
      <div
        class="card"
        data-uitestid="comparator-bar-vehicle-card1-present"
      >
        <p
          class="heading -black -lead"
        >
          Ford Kuga
        </p>
        <span
          class="text -xsmall -dark"
        >
          2.5 ECOBOOST PHEV ST-LINE 5 DOORS CVT
        </span>
        <button
          class="corner-button"
          data-testid="comparatorBar-delete-2"
          data-uitestid="comparator-bar-vehicle_card-remove-button-2"
          type="button"
        >
          <i
            class="icon -white"
          >
            <svg
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <polygon
                points="400 145.49 366.51 112 256 222.51 145.49 112 112 145.49 222.51 256 112 366.51 145.49 400 256 289.49 366.51 400 400 366.51 289.49 256 400 145.49"
              />
            </svg>
          </i>
        </button>
      </div>
      <div
        class="card -skeleton"
        data-uitestid="comparator-bar-vehicle-card2-absent"
      >
        <p
          class="heading -black -lead"
        >
          Vehicle 3
        </p>
        <span
          class="text -xsmall -dark"
        >
          —
        </span>
      </div>
      <div
        class="comparator-bar--actions"
      >
        <p
          class="heading comparator-bar--actions-count -black -xsmall"
        >
          2 Vehicles Added
        </p>
        <button
          class="button -teal -lead -solid"
          data-uitestid="comparator-bar-bar_compare-button"
        >
          <div
            class="button--inner"
          >
            Compare Vehicles
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ComparatorBarCard /> renders correctly with ComparatorBarCard 1`] = `
<div>
  <div
    class="card"
    data-uitestid="undefined-present"
  >
    <p
      class="heading -black -lead"
    >
      Ford Focus
    </p>
    <span
      class="text -xsmall -dark"
    >
      1.0 ECOBOOST 125 ST-LINE NAV 5 DOORS
    </span>
    <button
      class="corner-button"
      data-testid="comparatorBar-delete-0"
      data-uitestid="comparator-bar-vehicle_card-remove-button-0"
      type="button"
    >
      <i
        class="icon -white"
      >
        <svg
          height="1em"
          viewBox="0 0 512 512"
          width="1em"
        >
          <polygon
            points="400 145.49 366.51 112 256 222.51 145.49 112 112 145.49 222.51 256 112 366.51 145.49 400 256 289.49 366.51 400 400 366.51 289.49 256 400 145.49"
          />
        </svg>
      </i>
    </button>
  </div>
</div>
`;
